<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.htwds.mada.foodsharing.ProfileDisplayActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_title_tv"
            android:id="@+id/textView3"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="324dp"
            android:weightSum="10">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_last_name_tv"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_first_name_tv"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_street_address_et"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_street_address_no_et"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_zipcode_et"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_place_of_res_et"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_phone_et"
                    android:id="@+id/textView10"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_edit_email_et"
                    android:id="@+id/textView11"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_display_username_tv"
                    android:id="@+id/profile_display_username_tv"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_display_password_tv"
                    android:id="@+id/profile_display_password_tv"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="25dp">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_display_edit_btn"
            android:id="@+id/profile_display_edit_btn"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_display_show_tr_history"
            android:id="@+id/profile_edit_show_tr_history"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_display_cancle_btn"
            android:id="@+id/profile_display_cancel_btn"
            android:layout_weight="1" />


    </TableRow>

</LinearLayout>
