<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.htwds.mada.foodsharing.OfferEditActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_offer_tv"
            android:id="@+id/offerEditActivityTitle"
            android:textSize="25sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer_create_add_picture_btn"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:background="@color/blue06"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_tv"
            android:hint="@string/offer_create_title_et"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/choose_category_btn"
            android:id="@+id/edit_category_btn"
            android:background="@color/blue06"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView7"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_mhd_btn"
            android:id="@+id/edit_mhd_btn"
            android:background="@color/blue06"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView8"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailed_description_tv"
            android:layout_weight="1"
            android:hint="@string/detailed_description_et"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_offer_btn"
            android:id="@+id/publish_offer_btn"
            android:textAllCaps="false"
            android:background="@color/blue06"
            android:textColor="@color/abc_primary_text_material_dark"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>
